20070617 ay.[ch],divide.[ch],fuse.c,if1.[ch],if2.[ch],joystick.[ch],Makefile.am,
	 machine.c,memory.[ch],module.[ch],printer.[ch],scld.[ch],snapshot.c,
	 trdos.[ch],ula.[ch],z80/{coretest.c,z80.[ch]},zxatasp.[ch],zxcf.[ch]:
	 more explicit modularisation (patch #1734120).
20070617 disk/plusd.{c,h}: +D modularisation fixes (plusd_20070609) (Stuart).
20070617 sound/coreaudiosound.c: correct initialisation of stereo output
         (Fred).
20070617 dck.c,divide.c,fuse.c,if1.c,if2.c,machine.[ch],menu_data.dat,
	 module.[ch],printer.c,scld.c,simpleide.[ch],snapshot.c,ui/gtk/gtkui.c,
	 widget/menu.c,z80/z80.[ch],zxatasp.c,zxcf.c: allow distinction between
	 "soft" resets (activing the reset line on the Z80) and "hard" resets
	 (pulling the power). Needed for DivIDE and +D.
20070617 disk/plusd.c: fix plusd_memory_map() and remove unused variable
	 (plusd_20070609) (Stuart).
20070617 disk/wd1770.h: fix typo in comment (plusd_20070609) (Stuart).
20070617 disk/plusd.c,machine.c: clear the +D RAM only upon a hard reset, and
	 perform a hard reset when selecting a machine (plusd_20070609)
	 (Stuart).
20070617 man/fuse.1,ui/win32/win32ui.c,z80/coretest.c: fix compilation of
	 coretest, document hard resets in the man page and fix the reset menu
	 option for the Win32 UI (Stuart).
20070617 merge plusd_20070609 branch into trunk (Stuart).
20070617 memory.c: remove unused #includes (Stuart).
20070618 machine.c,spectrum.h,ula.[ch],machines/{pentagon.c,scorpion.c,
	 spec128.c,spec16.c,spec48.c,specplus2a.c,specplus2.c,specplus3.c,
	 specplus3e.c,spec_se.c,tc2048.c,tc2068.c,ts2068.c},z80/{coretest.c,
	 z80_macros.h,z80.pl}: separate out contention when MREQ isn't active,
	 as the +2A/+3 ULA applies contention only when MREQ is active (fixes
	 bug #1723250).
20070622 widget/widget.c,ui/xlib/xdisplay.c: show emulation speed in titlebar
         (part of bug #1686228) (Gergely Szasz).
20070624 ui/xlib/xdisplay.c: formatting fixes (part of bug #1686228) (Gergely
         Szasz).